<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ofs.ofmc.meetingroom.settings.SettingsFragment"
    android:padding="@dimen/padding_default">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="200dp"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_title_1"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/showList"
                    android:text="@string/show_list"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/showTimeline"
                    android:text="@string/show_timeline"/>

            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_title_2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>

            <CheckBox
                android:id="@+id/autofillProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autofill"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_title_3"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>

            <RadioGroup
                android:id="@+id/notificationInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ten_min"
                    android:text="@string/ten_min"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fifteen_min"
                    android:text="@string/fifteen_min"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/twenty_min"
                    android:text="@string/twenty_min"/>
            </RadioGroup>

            <Button
                android:id="@+id/saveSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save"
                style="@style/Widget.AppCompat.Button.Borderless"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
