<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize"
    android:padding="@dimen/padding_default">

    <android.support.v7.widget.CardView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:minHeight="200dp"
        android:layout_margin="@dimen/margin_default"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardBackgroundColor="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="200dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/padding_8dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions|textPassword"
                    android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
            <Button
                android:text="@string/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signup"
                android:background="@drawable/button_bg"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_gravity="bottom|end"
                />
            <Button
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit"
                android:background="@drawable/button_bg"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_gravity="bottom|end"
                />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:text="@string/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_centerHorizontal="true"
        android:id="@+id/forgotPassword"
        android:minHeight="40dp"
        android:gravity="center_vertical"/>
</RelativeLayout>
